Fix Navigation collapse breakpoints

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -44,7 +44,6 @@ body {
   height: auto;
   position: relative;
   padding-bottom: 60px;
-  padding-top: 70px;
 
   > .container-fluid, > .container {
     padding-bottom: 20px;
